==> GitGriever/Game/Keil_v5/ARM/Flash/HT32/FlashPrg.c <==
#include "..\FlashOS.H"        // FlashOS Structures
#define FMC_BASE              (0x40080000)
#define FMC                   ((FMC_TypeDef*) FMC_BASE)
#define FLASH_BASE            (0x00000000)
#define FLASH_OPT_BASE        (0x1FF00000)
#define OPCR_OPM                   (0x0F <<  1)   /* OPM mask */
#define OPCR_OPM_IDLE              (0x06 <<  1)   /* Idle (default) */
#define OPCR_OPM_CMD_TO_MAIN       (0x0A <<  1)   /* Commit command to main Flash */
#define OPCR_OPM_FINISH_ON_MAIN    (0x0E <<  1)   /* All operation finished on main Flash */
#define OCMR_CMD_IDLE              (0x00 <<  0)   /* Idle - default */
#define OCMR_CMD_WORD_PROGRAM      (0x04 <<  0)   /* Word program */
#define OCMR_CMD_PAGE_ERASE        (0x08 <<  0)   /* Page erase */
#define OCMR_CMD_MASS_ERASE        (0x0A <<  0)   /* Mass erase */
#define OISR_ITADF                 (0x01 <<  1)   /* Invalid Target Address Flag */
#define OISR_OBEF                  (0x01 <<  2)   /* Option Byte Checksum Error Flag */
#define OISR_IOCMF                 (0x01 <<  3)   /* Invalid Operation Command Flag */
#define OISR_OREF                  (0x01 <<  4)   /* Operation Error Flag */
#define OISR_ERR                   (OISR_ITADF | OISR_OBEF | OISR_IOCMF | OISR_OREF)
#define OISR_PPEF                  (0x01 << 17)   /* Page Erase/Program Protected Error Flag */
#define OIER_ITADIEN               (0x01 <<  1)   /* Invalid Target Address Enable */

int Init (unsigned long adr, unsigned long clk, unsigned long fnc) {

  FMC->VMCR = VMCR_VMCB_MAIN;                     /* set vector mapping to Flash Memory Area */
  FMC->OIER = OIER_EN;                            /* enable error flag     */
  FMC->OISR = OISR_ERR;                           /* reset error flag      */

#ifdef FLASH_MEM
  switch (FMC->MDID) {                            /* select device         */
    case 0x03761552:
      fbase = FLASH_BASE;                         /* set used base address */
      psize = FMC->PSSR;                          /* set sector size       */
      fsize = psize * (FMC->PNSR - 1);            /* calculate flash size  */
      break;

    default:
      fbase = FLASH_BASE;                         /* set used base address */
      psize = FMC->PSSR;                          /* set sector size       */
      fsize = psize * (FMC->PNSR - 0);            /* calculate flash size  */
      break;
  }
#endif

#ifdef FLASH_OPT
      fbase = FLASH_OPT_BASE;                     /* set used base address */
      psize = FMC->PSSR;                          /* set sector size       */
      fsize = psize * (            1);            /* calculate flash size  */
#endif

  return (0);
}

int UnInit (unsigned long fnc) {

  FMC->OPCR = OPCR_OPM_IDLE;
  FMC->OCMR = OCMR_CMD_IDLE;

  return (0);
}

int EraseChip (void) {

  FMC->TADR = fbase;
  FMC->OCMR = OCMR_CMD_MASS_ERASE;
  FMC->OPCR = OPCR_OPM_CMD_TO_MAIN;

  /* Wait until all operations have been finished */
  while ((FMC->OPCR & OPCR_OPM) != OPCR_OPM_FINISH_ON_MAIN) __nop();

  if (FMC->OISR & (OISR_ERR | OISR_PPEF)) {       /* check for error */
    FMC->OISR = OISR_ERR;                         /* reset error flag */
    return (1);
  }

  return (0);
}

int EraseSector (unsigned long adr) {

  adr = (adr    ) & ~(psize - 1);                 /* Adjust address for page  */

  // Skip erased address
  if ((adr) == lastErase)
  {
    return (0);
  }

  if ((adr         ) >= (fbase + fsize)) {        /* Check adr, provent address over range */
    return (1);
  }

  FMC->TADR = adr;
  FMC->OCMR = OCMR_CMD_PAGE_ERASE;
  FMC->OPCR = OPCR_OPM_CMD_TO_MAIN;
  lastErase = adr;
  
  /* Wait until all operations have been finished */
  while ((FMC->OPCR & OPCR_OPM) != OPCR_OPM_FINISH_ON_MAIN) __nop();

  if (FMC->OISR & (OISR_ERR | OISR_PPEF)) {       /* check for error */
    FMC->OISR = OISR_ERR;                         /* reset error flag */
    return (1);
  }

  return (0);
}

int ProgramPage (unsigned long adr, unsigned long sz, unsigned char *buf) {

  sz  = (sz  + 3) & ~3;                           /* Adjust size    for Words */
  adr = (adr    ) & ~3;                           /* Adjust address for Words */

  if ((adr + sz - 4) >= (fbase + fsize)) {        /* Check adr, provent address over range */
    return (1);
  }

  FMC->OCMR = OCMR_CMD_WORD_PROGRAM;
  while (sz) {

    FMC->TADR = adr;
    FMC->WRDR = *((u32 *) buf);
    FMC->OPCR = OPCR_OPM_CMD_TO_MAIN;

    /* Wait until all operations have been finished */
    while ((FMC->OPCR & OPCR_OPM) != OPCR_OPM_FINISH_ON_MAIN) __nop();

    if (FMC->OISR & (OISR_ERR | OISR_PPEF)) {       /* check for error */
      FMC->OISR = OISR_ERR;                         /* reset error flag */
      return (1);
    }

    adr += 4;                                     /* Go to next Word */
    buf += 4;
    sz  -= 4;
  }

  return (0);
}
